# disclosure-multiagent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  pyproject.toml  requirements_poc.txt  start_disclosure.bat
.well-known/: agent-card.json
10_Research/: law_url_candidates.json
api/: main.py  requirements.txt
articles/: disclosure-oss-phase1-integrated.md  disclosure-oss-quality-story.md
docs/: article_disclosure_banking_draft.md  article_disclosure_batch_draft.md  article_disclosure_deploy_draft.md  article_disclosure_edinet_draft.md  article_disclosure_oss_launch.md  article_disclosure_phase1_draft.md  article_disclosure_phase2_draft.md  article_disclosure_pipeline_draft.md  article_disclosure_shoshu_draft.md  article_disclosure_ssbj_draft.md  debug_mode.md  demo_flow_checklist.md  how_to_get_yuho.md  law_yaml_schema.md  public_readiness_checklist.md  quick_start_windows.md  step_execution_guide.md  windows_quickstart.md
laws/: README.md  banking_2025.yaml  fsa_best_practices_2024.yaml  human_capital_2024.yaml  ias_12_2025.yaml  ias_16_2025.yaml  ias_19_2025.yaml  ias_1_2025.yaml  ias_20_2025.yaml  ias_21_2025.yaml  ias_23_2025.yaml  ias_24_2025.yaml  ias_27_2025.yaml  ias_28_2025.yaml  ias_29_2025.yaml  ias_33_2025.yaml  ias_36_2025.yaml  ias_37_2025.yaml  ias_38_2025.yaml  ias_40_2025.yaml  ias_41_2025.yaml  ias_7_2025.yaml  ias_8_2025.yaml  ifrs_10_2025.yaml  ifrs_12_2025.yaml  ifrs_13_2025.yaml  ifrs_15_2025.yaml  ifrs_16_2025.yaml  ifrs_17_2025.yaml  ifrs_18_2025.yaml  ifrs_2_2025.yaml  ifrs_3_2025.yaml  ifrs_5_2025.yaml  ifrs_6_2025.yaml  ifrs_7_2025.yaml  ifrs_8_2025.yaml  ifrs_9_2025.yaml  jicpa_disclosure_2024.yaml  kinshohō_2025.yaml  shareholder_notice_2025.yaml  (+1 more)
reviews/: P9-CR-350k-a7a.md  P9-CR-D-Docs-01_recheck.md  P9-CR-D-EDINET-01.md  P9-CR-D-EDINET-01_recheck.md  P9-CR-D-SSBJ-01.md  P9-CR-D-Zenn-01.md  P9-CR-D-Zenn-01_v2.md  P9-CR-D-Zenn-01_v2_recheck.md  P9-CR-D-Zenn-02.md  P9-CR-D-Zenn-04-recheck.md  P9-CR-D-Zenn-04.md  P9-CR-D-Zenn-04_recheck.md  P9-CR-D-Zenn-04b.md  P9-CR-D-Zenn-05-banking.md  P9-CR-D-Zenn-05.md
scripts/: __init__.py  annual_law_maintenance.sh  app.py  check_law_updates.py  conftest.py  debug_ipc.py  debug_monitor.py  debug_prompts.py  generate_sample_pdf.py  m1_pdf_agent.py  m2_law_agent.py  m3_gap_analysis_agent.py  m4_proposal_agent.py  m5_report_agent.py  m6_law_url_collector.py  m7_edinet_client.py  pdf_poc_extract.py  run_e2e.py  run_pipeline.py  run_real_llm_via_claude_code.py  step_serializers.py  (+21 more)
(+28 files in other folders)
