[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "disclosure-multiagent"
version = "1.0.0"
description = "Multi-agent AI pipeline for Japanese corporate disclosure gap analysis (松竹梅 3-tier improvement plan)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Majiro-ns", email = "majiro-ns@users.noreply.github.com" }
]
keywords = [
    "disclosure", "annual-report", "yuho", "EDINET", "SSBJ",
    "human-capital", "multi-agent", "LLM", "PDF", "compliance"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"

# Core dependencies (PDF parsing + law YAML only)
dependencies = [
    "pymupdf>=1.23.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# Real LLM support (Claude API)
llm = [
    "anthropic>=0.40.0",
]

# REST API server
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

# Document export (Word / Excel)
export = [
    "python-docx>=1.0.0",
    "openpyxl>=3.0.0",
]

# Streamlit UI
ui = [
    "streamlit>=1.30.0",
]

# Development / testing
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

# Everything
all = [
    "disclosure-multiagent[llm,api,export,ui,dev]",
]

[project.scripts]
# CLI entrypoint: disclosure-check your_yuho.pdf --company-name "株式会社A" --fiscal-year 2025 --level 竹
disclosure-check = "scripts.run_pipeline:main"

[project.urls]
Homepage = "https://github.com/Majiro-ns/disclosure-multiagent"
Repository = "https://github.com/Majiro-ns/disclosure-multiagent"
Issues = "https://github.com/Majiro-ns/disclosure-multiagent/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "laws*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests", "scripts"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/__pycache__/*", "scripts/reports/*"]
